force-app/main/default/objects/Project__c/fields/Bid_Status__c.field-meta.xml
<CustomField>
    <fullName>Bid_Status__c</fullName>
    <label>Bid Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
            <value>
                <fullName>Out to Bid</fullName>
            </value>
            <value>
                <fullName>Street Quote</fullName>
            </value>
            <value>
                <fullName>Bid Quote</fullName>
            </value>
            <value>
                <fullName>Design Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>