force-app/main/default/objects/Project__c/fields/HiOpportunity__c.field-meta.xml
<CustomField>
    <fullName>HiOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HiOpportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>