force-app/main/default/objects/Project__c/fields/Hisense_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hisense Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>