force-app/main/default/objects/Project__c/fields/HisenseASM__c.field-meta.xml
<CustomField>
    <fullName>HisenseASM__c</fullName>
    <formula>Customer_Name__r.Hisense_ASM__r.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HisenseASM</label>
    <type>Text</type>
</CustomField>