force-app/main/default/objects/Project__c/fields/HisenseRSM__c.field-meta.xml
<CustomField>
    <fullName>HisenseRSM__c</fullName>
    <formula>Customer_Name__r.Hisense_RSM__r.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HisenseRSM</label>
    <type>Text</type>
</CustomField>