force-app/main/default/objects/Project__c/recordTypes/MX.recordType-meta.xml
<RecordType>
    <fullName>MX</fullName>
    <active>true</active>
    <label>MX</label>
</RecordType>