force-app/main/default/objects/Project__c/recordTypes/US.recordType-meta.xml
<RecordType>
    <fullName>US</fullName>
    <active>true</active>
    <label>US</label>
</RecordType>