force-app/main/default/objects/Project__c/validationRules/check_scope.validationRule-meta.xml
<ValidationRule>
    <fullName>check_scope</fullName>
    <active>true</active>
    <description>请输入0-100</description>
    <errorConditionFormula>Win_Probability__c &gt; 1 || Win_Probability__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Win_Probability__c</errorDisplayField>
    <errorMessage>Please input 0-100</errorMessage>
</ValidationRule>