force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Buyer__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Expected_Deliver_Date__c</columns>
    <columns>Hisense_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>